Fixing tags spacing of wiki-post items in wiki mode

--- a/source/layout.css
+++ b/source/layout.css
@@ -640,6 +640,10 @@ footer .back-to-top {
 .wiki-post .details-bottom {
 	border-top: 0.1rem solid var(--color-text-dark);
 	padding: 0.8rem;
+	display: flex;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 0.4rem;
 }
 /* #endregion */
   
